# agentdiff

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  agentdiff_e2e_cycle.txt  agentdiff_mcp_server_cycle.txt  install.sh  traces.jsonl
.agentdiff/: ledger.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_support.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: agentdiff-consolidate.yml  agentdiff-policy.yml  ci.yml  release.yml
.opencode/plugins/: agentdiff.ts
.windsurf/: hooks.json
docs/: context-workflow.md
examples/mcp/: agentdiff-mcp.json
scripts/: capture-antigravity.py  capture-claude.py  capture-codex.py  capture-copilot.py  capture-cursor.py  capture-opencode.py  capture-windsurf.py  e2e-test.sh  finalize-ledger.py  mcp-smoke-test.py  opencode-agentdiff.ts  prepare-ledger.py  record-context.py  test-pipeline-comprehensive.py  write-note.py
scripts/tests/: test_capture_antigravity.py  test_capture_codex.py  test_capture_copilot.py  test_capture_cursor.py  test_capture_prompts.py  test_extension.js  test_record_context.py
scripts/vscode-extension/: extension.js  package.json
src/: cli.rs  config.rs  data.rs  init.rs  keys.rs  main.rs  store.rs  util.rs
src/commands/: blame.rs  config_cmd.rs  consolidate.rs  context.rs  diff.rs  export.rs  install_ci.rs  install_skill.rs  keys.rs  ledger.rs  list.rs  log.rs  migrate.rs  mod.rs  policy.rs  push.rs  remote_status.rs  report.rs  show.rs  sign_entry.rs  stats.rs  status.rs  sync_notes.rs  verify.rs
src/configure/: agents_md.rs  antigravity.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  mod.rs  opencode.rs  windsurf.rs
templates/skills/agentdiff-context/: SKILL.md
