[package]
name = "agentdiff"
version = "0.1.0"
edition = "2024"
description = "Audit and trace autonomous AI code contributions in git repositories"
authors = ["Prakhar Khatri"]
license = "MIT"

[[bin]]
name = "agentdiff"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
dirs = "5"
anyhow = "1"
thiserror = "1"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "2"