[package]
name = "agentdiff"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Audit and trace autonomous AI code contributions in git repositories"
authors = ["Prakhar Khatri"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/codeprakhar25/agentdiff"
homepage = "https://github.com/codeprakhar25/agentdiff"
documentation = "https://docs.rs/agentdiff"
keywords = ["ai", "git", "audit", "mcp", "agent"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".agentdiff/*",
    ".opencode/*",
    ".windsurf/*",
    "agentdiff_e2e_cycle.txt",
    "agentdiff_mcp_server_cycle.txt",
]

[[bin]]
name = "agentdiff"
path = "src/main.rs"

[[bin]]
name = "agentdiff-mcp"
path = "src/bin/agentdiff-mcp.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
dirs = "5"
anyhow = "1"
thiserror = "1"
glob = "0.3"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "2"
